@@ -1,3 +1,11 @@
+Pre-release
+    - Integrated the unit tests with the main project, so now the unit tests
+      are automatically compiled along with the examples, and can now be run
+      by typing 'make test' or 'ctest'. Use 'GTEST_COLOR=1 ARGS="-V" make test'
+      or 'GTEST_COLOR=1 ctest -V' for coloured verbose testing output.
+    - CMake minimum required version bumped to 3.10 (3.12 for macOS) for
+      automatic unit tests detection by CMake
+
 Version 0.4.0 - November 28, 2020
     - Renamed 'master' branch to 'main'
 
